--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,8 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  h4 Nuestra aplicación permitirá lo siguiente
+  ul
+    li Nombre de usuario único
+    li Mensajes públicos
+    li Mensajes privados
